Change to TinkerTest

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Tinker</title>
+  <title>TinkerTest</title>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/sunny/jquery-ui.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" type="text/css" media="screen" />
 
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <button type="button" class="tinker btn btn-default navbar-btn">Tinker!</button>
+    <button type="button" class="tinkertest btn btn-default navbar-btn">Test!</button>
   </div>
 </nav>
 
@@ -30,8 +30,8 @@
   <h2>YAML Input</h2>
 </div>
 <div class="col-xs-4">
-  <pre class="tinker output">Press the "Tinker!" Button…</pre>
-  <h2>Tinker Output</h2>
+  <pre class="tinkertest output">Press the "Test!" Button…</pre>
+  <h2>TinkerTest Output</h2>
 </div>
 
   </div>
